# neural_network_c-_old

./: CMakeLists.txt
include/: matrix.cpp  matrix.h  net.h  thread_simple.cpp  thread_simple.h  toolchest.h  vector.h
lib/: simple.cpp  simple.h
src/: main.cpp  matrix.cpp  net.cpp  vector.cpp  workspace
try/: matvect  matvect.cpp
